@@ -31,18 +31,6 @@ struct winsize
     unsigned short int ws_ypixel;
   };
 
-#define NCC	8
-struct termio
-  {
-    unsigned short int c_iflag;		/* input mode flags */
-    unsigned short int c_oflag;		/* output mode flags */
-    unsigned short int c_cflag;		/* control mode flags */
-    unsigned short int c_lflag;		/* local mode flags */
-    char c_line;			/* line discipline */
-    /* Yes, this is really NCCS.  */
-    unsigned char c_cc[32 /* NCCS */]; /* control characters */
-  };
-
 /* modem lines */
 #define TIOCM_LE	0x001		/* line enable */
 #define TIOCM_DTR	0x002		/* data terminal ready */
